--- a/HG/HG/template/lastcheck.html
+++ b/HG/HG/template/lastcheck.html
@@ -15,7 +15,7 @@ margin-right:auto;
 function makesure(){
     var fromdate = document.getElementById("fromdate").value;
     var todate = document.getElementById("todate").value;
-    var info = "确认最终审核通过"+fromdate+"到"+todate+"的合同?";
+    var info = "确认提交"+fromdate+"到"+todate+"的合同的审核结果?";
     var r = confirm(info);
     return r;
 }
