--- a/HG/HG/template/newproduct.html
+++ b/HG/HG/template/newproduct.html
@@ -6,6 +6,7 @@
     <div class="new">
         <h1>欢迎使用理财管理查询系统</h1>
     </div>
+    <a href="/products">所有产品</a>
     {% if create_succ %}
         <div class="alert alert-error">
             <button type="button" class="close" data-dismiss="alert">×</button>
