--- a/HG/HG/template/showcontract.html
+++ b/HG/HG/template/showcontract.html
@@ -10,7 +10,7 @@ margin-right: auto;
 </style>
 <script>
 function back(){
-window.open("/querycontracts",'_parent')
+history.back(-1);
 }
 </script>
 <div class="right">
