--- a/HG/HG/template/altercontract.html
+++ b/HG/HG/template/altercontract.html
@@ -2,7 +2,11 @@
 
 {% block center %}
 <script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
-
+<script>
+function back(){
+history.back(-1);
+}
+</script>
 
 <div class="right">
     <div class="new">
@@ -57,7 +61,8 @@
                 <input type="submit" value="提交" class="btn btn-primary">
             </p>
 
-            </form>
+        </form>
+        <input type="submit" value="返回" class="btn btn-primary" onclick="back()" />
             </div>
       
 
