--- a/HG/HG/template/repayitem.html
+++ b/HG/HG/template/repayitem.html
@@ -77,6 +77,11 @@ function clickrenewal(){
 } 
 
 </script>
+<script>
+function back(){
+history.back(-1);
+}
+</script>
 
 <h2>还款项</h2>
     <label> 还款日期：{{repayitem.repaydate}}</label>
@@ -99,5 +104,7 @@ function clickrenewal(){
     该还款项已完成
     {%endifequal%}
     </div>
-        
+     <br></br>
+                <input type="submit" value="返回" class="btn btn-primary" onclick="back()">
+            </p>
 {% endblock %}
