renewal repair && add bigparty

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -51,7 +51,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="/newproduct">产品管理</a></li>
                             <li><a href="/newmanager">经理管理</a></li>
-                            <li><a href="/newparty">团队管理</a></li>
+                            <li><a href="/newbigparty">团队管理</a></li>
 							<li><a href="/newfield">职场管理</a></li>
                         </ul>
                     </li>
