--- a/HG/HG/template/products.html
+++ b/HG/HG/template/products.html
@@ -19,7 +19,7 @@ history.back(-1);
           </tr>
         </thead>
         <tbody>
-        {%for item in productss%}
+        {%for item in products%}
         <tr id="row_{{item.id}}">
             <td><a href="/product/{{item.id}}">{{item.name}}</a></td>
             <td>{{item.rate}}</td>
