--- a/HG/HG/template/intocnt.html
+++ b/HG/HG/template/intocnt.html
@@ -14,8 +14,9 @@ String.prototype.Trim = function()
 { 
     return this.replace(/(^\s*)|(\s*$)/g, ""); 
 }
-function getpartylist(field_id){
+function getbigpartylist(field_id){
     if(field_id=="-1"){
+        document.getElementById("bigparty").innerHTML = "";
         document.getElementById("party").innerHTML = "";
         document.getElementById("manager").innerHTML = "";
     }    
@@ -24,7 +25,7 @@ function getpartylist(field_id){
     $.ajax({
         type: "GET",
         data: "field_id="+field_id+"&fromdate="+fromdate+"&todate="+todate,
-        url: "/getparties/intocnt",
+        url: "/getbigparties/intocnt",
         dataType: "json",
         cache: false,
         success: function(data){ 
@@ -32,7 +33,51 @@ function getpartylist(field_id){
             {
                 if(Trim()=='true'){
                     if(field_id!="-1"){
-                        var partystr = "团队<select id='party_select' name='party_id' onchange='getmanagerlist(this.options[this.options.selectedIndex].value)'><option value='-1' selected>--</option>";
+                        var partystr = "大团<select id='party_select' name='bigparty_id' onchange='getpartylist(this.options[this.options.selectedIndex].value)'><option value='-1' selected>--</option>";
+                        for(var i=0;i<data.bigparties.length;i++){
+                            partystr += "<option value='"+data.bigparties[i][0]+"'>"+data.bigparties[i][1]+"</option>";
+                        }
+                        partystr += "</selected>";
+                        document.getElementById("bigparty").innerHTML = partystr;
+                    }
+                    document.getElementById("cnt").innerHTML = data.cnt;
+                    document.getElementById("totalm").innerHTML = data.totalmoney;
+                }
+            }
+         }
+    }); 
+    if(document.getElementById("field_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+        document.getElementById("party").innerHTML = "";
+        document.getElementById("bigparty").innerHTML = "";
+    }
+    if(document.getElementById("bigparty_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+        document.getElementById("party").innerHTML = "";
+    }
+    if(document.getElementById("party_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+    }
+}
+function getpartylist(bigparty_id){
+    if(bigparty_id=="-1"){
+        document.getElementById("party").innerHTML = "";
+        document.getElementById("manager").innerHTML = "";
+    }    
+    var fromdate = document.getElementById("fromdate").value;
+    var todate = document.getElementById("todate").value;
+    $.ajax({
+        type: "GET",
+        data: "bigparty_id="+bigparty_id+"&fromdate="+fromdate+"&todate="+todate,
+        url: "/getparties/intocnt",
+        dataType: "json",
+        cache: false,
+        success: function(data){ 
+            with (data.message)
+            {
+                if(Trim()=='true'){
+                    if(bigparty_id!="-1"){
+                        var partystr = "小团<select id='party_select' name='party_id' onchange='getmanagerlist(this.options[this.options.selectedIndex].value)'><option value='-1' selected>--</option>";
                         for(var i=0;i<data.parties.length;i++){
                             partystr += "<option value='"+data.parties[i][0]+"'>"+data.parties[i][1]+"</option>";
                         }
@@ -46,6 +91,11 @@ function getpartylist(field_id){
          }
     }); 
     if(document.getElementById("field_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+        document.getElementById("party").innerHTML = "";
+        document.getElementById("bigparty").innerHTML = "";
+    }
+    if(document.getElementById("bigparty_select").value=="-1"){
         document.getElementById("manager").innerHTML = "";
         document.getElementById("party").innerHTML = "";
     }
@@ -87,8 +137,13 @@ function getmanagerlist(party_id){
     if(document.getElementById("field_select").value=="-1"){
         document.getElementById("manager").innerHTML = "";
         document.getElementById("party").innerHTML = "";
+        document.getElementById("bigparty").innerHTML = "";
     }
-    if(party_id=="-1"){
+    if(document.getElementById("bigparty_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+        document.getElementById("party").innerHTML = "";
+    }
+    if(document.getElementById("party_select").value=="-1"){
         document.getElementById("manager").innerHTML = "";
     }
 }
@@ -116,10 +171,15 @@ function getpersoncnt(manager_id){
    if(document.getElementById("field_select").value=="-1"){
         document.getElementById("manager").innerHTML = "";
         document.getElementById("party").innerHTML = "";
-    } 
-   if(document.getElementById("party_select").value=="-1"){
+        document.getElementById("bigparty").innerHTML = "";
+    }
+    if(document.getElementById("bigparty_select").value=="-1"){
         document.getElementById("manager").innerHTML = "";
-    } 
+        document.getElementById("party").innerHTML = "";
+    }
+    if(document.getElementById("party_select").value=="-1"){
+        document.getElementById("manager").innerHTML = "";
+    }
 }
 
 </script>
@@ -133,14 +193,15 @@ function getpersoncnt(manager_id){
     <input id="todate" value={{todate}} name="todate" onClick="WdatePicker()">
     <br />
     <p id="field">职场
-    <select id="field_select" name="field_id" onchange="getpartylist(this.options[this.options.selectedIndex].value)">
+    <select id="field_select" name="field_id" onchange="getbigpartylist(this.options[this.options.selectedIndex].value)">
         <option value="-1" selected>--</option>
         {%for field in fields%}
         <option value={{field.id}}>{{field.name}}</option>
         {%endfor%}
     </select>
     </p>
-    
+    <p id="bigparty">
+    </p>
     <p id="party">
     </p>
     <p id="manager">
