show community construct

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -53,6 +53,7 @@
                             <li><a href="/newmanager">经理管理</a></li>
                             <li><a href="/newbigparty">团队管理</a></li>
 							<li><a href="/newfield">职场管理</a></li>
+							<li><a href="/construct">人员结构</a></li>
                         </ul>
                     </li>
 					<li class="dropdown" id="accountmenu" style="padding-top: 30px;">
