--- a/HG/HG/template/altercontract.html
+++ b/HG/HG/template/altercontract.html
@@ -57,12 +57,11 @@ history.back(-1);
             {%endfor%}
             </select>
             <p class="form-actions">
-
                 <input type="submit" value="提交" class="btn btn-primary">
+                <button class="btn btn-primary" onclick="back()">返回</button>
             </p>
 
         </form>
-        <input type="submit" value="返回" class="btn btn-primary" onclick="back()" />
             </div>
       
 
