--- a/HG/HG/template/checkcontract.html
+++ b/HG/HG/template/checkcontract.html
@@ -89,9 +89,9 @@ margin-right: auto;
 			  <input type="radio" name="status" value="2" checked="checked"/>审核通过&nbsp;&nbsp;&nbsp;<br />
 				&nbsp;<input type="radio" name="status" value="1" />审核不通过<br />
                 <input type="submit" value="提交" class="btn btn-primary" />
+                <button class="btn btn-primary" onclick="back()">返回</button>
                 </p>
             </form>
-            <input type="submit" value="返回" class="btn btn-primary" onclick="back()" />
 		</div>
             </div>
       
