--- a/HG/HG/template/newparty.html
+++ b/HG/HG/template/newparty.html
@@ -32,7 +32,7 @@ history.back(-1);
                 <button class="btn btn-primary" onclick="back()">返回</button>
             </p>
         </form>
-            
+        <a href="/ajust/2">小团调整</a> 
         </div>
 </div>
 
