--- a/HG/HG/template/newbigparty.html
+++ b/HG/HG/template/newbigparty.html
@@ -27,7 +27,7 @@
                 <input type="submit" value="提交" class="btn btn-primary">
             </p>
         </form>
+        <a href="/ajust/1">大团调整</a>
     </div>
-
-
+</div>
 {% endblock %}
