--- a/HG/HG/template/newmanager.html
+++ b/HG/HG/template/newmanager.html
@@ -26,6 +26,7 @@
                 <input type="submit" value="提交" class="btn btn-primary">
             </p>
         </form>
+        <a href="/ajust/3">经理调整</a>
     </div>
 <div>
 
