--- a/HG/HG/template/queryrepayitems.html
+++ b/HG/HG/template/queryrepayitems.html
@@ -94,7 +94,11 @@ function clickrenewal(item_id){
     document.getElementById("renewal_area").style.display="block";
     document.getElementById("tmpitem_id").value = item_id;
 } 
-
+function setcontract_id()
+{
+    var c_id = document.getElementById("input_id").value;
+    document.getElementById("hidden_id").value = c_id;
+}
 </script>
 
 <h2>还款查询</h2>
@@ -104,8 +108,14 @@ function clickrenewal(item_id){
     <input id="fromdate" name="fromdate" value={{fromdate}} onClick="WdatePicker()">
     终止日期
     <input id="todate" name="todate" value={{todate}} onClick="WdatePicker()">
-    <input type="text" name="contract_id" placeholder="合同编号">
+    <input  id="input_id" type="text" name="contract_id" placeholder="合同编号">
     <input type="submit" value="Search">
+    </form>
+    <form action="/outputfile/{{type_id}}" method="get" target="_blank" onsubmit="setcontract_id()">
+    <input name="fromdate" style="display:none;" value={{fromdate}}>
+    <input name="todate" style="display:none;" value={{todate}}>
+    <input id="hidden_id" style="display:none;" type="text" name="contract_id" placeholder="合同编号">
+    <input type="submit" value="导出excel">
     </form>
 </div>
     <div class="container">
