--- a/HG/HG/template/showcontract.html
+++ b/HG/HG/template/showcontract.html
@@ -39,6 +39,18 @@ history.back(-1);
                     <td>{{contract.bank}}</td>
                 </tr>
                 <tr>
+                    <th>收款支行</th>
+                    <td>{{contract.subbranch}}</td>
+                </tr>
+                <tr>
+                    <th>收款省/直辖市</th>
+                    <td>{{contract.province}}</td>
+                </tr>
+                <tr>
+                    <th>收款市/县</th>
+                    <td>{{contract.city}}</td>
+                </tr>
+                <tr>
                     <th>银行卡号</th>
                     <td>{{contract.bank_card}}</td>
                 </tr>
@@ -61,6 +73,10 @@ history.back(-1);
                 <tr>
                     <th>理财顾问</th>
                     <td>{{contract.thismanager.name}}</td>
+                </tr>
+                <tr>
+                    <th>备注</th>
+                    <td>{{contract.comment}}</td>
                 </tr>
                 <tr>
                     <th>审核状态</th>
