--- a/HG/HG/template/altercontract.html
+++ b/HG/HG/template/altercontract.html
@@ -2,12 +2,33 @@
 
 {% block center %}
 <script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
-<script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="application/javascript">
 function back(){
 history.back(-1);
 }
-</script>
 
+RuleCheck2 = function (string) {  
+    var pattern = /^\d{10}$/;  
+    if (pattern.test(string)) {  
+        return true;  
+    }  
+    return false;  
+};
+
+RuleCheck1 = function (string) {  
+    var pattern = /^(\d{15}$|^\d{18}$|^\d{17}(\d|X|x))$/;  
+    if (pattern.test(string)) {  
+        return true;  
+    }  
+    return false;  
+}; 
+</script >
+<style>
+input{
+float:left;
+}
+</style>
 <div class="right">
     <div class="new">
         <h1>合同修改</h1>
@@ -22,11 +43,13 @@ history.back(-1);
         <div class="well">  
             <form class="form-horizontal" action="/altercontract" method="post">
 				<input type="hidden" id="contractid" name="contractid" placeholder="合同id" value={{contract.id}}>
-                <label class="control-label">合同编号</label><input type="text" id="number" name="number" placeholder="合同编号" value={{contract.number}}>
+                <label class="control-label">合同编号</label><input type="text" id="number" name="number" placeholder="合同编号" style="float:left" value={{contract.number}}><div id="number_tip" style=" float:left;color:#c00; font-weight:bold; font-size:18px">  </div>  
 				<br /><br />
                 <label class="control-label">姓名</label><input type="text" id="client_name" name="client_name" placeholder="姓名" value={{contract.client_name}}>
+				
 				<br /><br />
-			   <label class="control-label">身份证号</label><input type="text" id="client_idcard" name="client_idcard" placeholder="身份证号" value={{contract.client_idcard}}>
+			   <label class="control-label">身份证号</label><input type="text" style="float:left" id="client_idcard" name="client_idcard" placeholder="身份证号" value={{contract.client_idcard}}>
+			   <div id="idcard_tip" style=" float:left;color:#c00; font-weight:bold; font-size:18px">  </div>  
 				<br /><br />
                 <label class="control-label">开户行</label><input type="text" id="bank" name="bank" placeholder="开户行" value={{contract.bank}}>
 				<br /><br />
@@ -63,7 +86,41 @@ history.back(-1);
 
         </form>
             </div>
-      
+      <script type="application/javascript" > 
+		$("#number").blur("blur",function(){  
+        var number = $("#number").val();  
+        if(number == ""){  
+            $("#number_tip").html("合同编号不能为空");  
+        }  
+        else  
+        {  
+            if(RuleCheck2(number)){  
+                $("#number_tip").html("");  
+            }  
+            else  
+            {  
+                $("#number_tip").html("请输入10位合同编号！");  
+            };  
+        };  
+    }); 
+	
+	$("#client_idcard").blur("blur",function(){  
+        var number = $("#client_idcard").val();  
+        if(number == ""){  
+            $("#idcard_tip").html("身份证号不能为空");  
+        }  
+        else  
+        {  
+            if(RuleCheck1(number)){  
+                $("#idcard_tip").html("");  
+            }  
+            else  
+            {  
+                $("#idcard_tip").html("请输入正确身份证号码！");  
+            };  
+        };  
+    }); 
+	</script>
 
     
     </div> <!-- /container -->
