--- a/HG/HG/template/repayitem.html
+++ b/HG/HG/template/repayitem.html
@@ -82,36 +82,71 @@ function back(){
 history.back(-1);
 }
 </script>
-
-<h2>还款项</h2>
-    <label> 还款日期：{{repayitem.repaydate}}</label>
-    <label> 还款金额：{{repayitem.repaymoney}}</label>
-    <label> 所属合同编号：<a href="/contract/{{repayitem.thiscontract.id}}">{{repayitem.thiscontract.number}}</a></label>
-    <label>合同金额：{{repayitem.thiscontract.money}}</label>
-    <label>合同日期：{{repayitem.thiscontract.startdate}}到{{repayitem.thiscontract.enddate}}</label>
-    <label>所买产品：<a href="/product/{{repayitem.thiscontract.thisproduct.id}}">{{repayitem.thiscontract.thisproduct.name}}</a></label>
-    <div id="status">
-    {%ifequal repayitem.status 1%}
-    <button onclick="repay({{repayitem.id}})">还款</button><br />
-    {%ifnotequal repayitem.repaytype 1%}
-    <form action="/renewalcontract/{{repayitem.id}}" method="get">
-    <input type="submit" value="续签" />
-    </form>
-    {%endifnotequal%}
-    {%endifequal%}
-    {%ifequal repayitem.status 3%}
-    <label>该还款项已续签</label>
-    <button onclick="repay({{repayitem.id}})">还款</button><br />
-    
-    {%endifequal%}
-    {%ifequal repayitem.status 2%}
-    <label>该还款项已完成</label>
-    {%endifequal%}
-    {%ifequal repayitem.status 4%}
-    <label>该还款项已完成</label>
-    {%endifequal%}
+<style>
+.well{
+text-align:center;
+margin-left: auto;
+margin-right: auto;
+}
+</style>
+<div class="right">
+    <div class="new">
+        <h1>还款项</h1>
     </div>
-     <br></br>
-                <input type="submit" value="返回" class="btn btn-primary" onclick="back()">
-            </p>
+    <div class="well">
+        <table  class="table" style="width: 30%;margin:auto ;font-size:20px;text-align:left; border-collapse:separate;border-spacing:10px">
+            <tbody>
+                <tr>
+                    <th>还款日期</th>
+                    <td>{{repayitem.repaydate}}</td>
+                </tr>
+                <tr>
+                    <th>还款金额</th>
+                    <td>{{repayitem.repaymoney}}</td>
+                </tr>
+                <tr>
+                    <th>所属合同编号</th>
+                    <td><a href="/contract/{{repayitem.thiscontract.id}}">{{repayitem.thiscontract.number}}</a></td>
+                </tr>
+                <tr>
+                    <th>合同金额</th>
+                    <td>{{repayitem.thiscontract.money}}</td>
+                </tr>
+                 <tr>
+                    <th>合同日期</th>
+                    <td>{{repayitem.thiscontract.startdate}}到{{repayitem.thiscontract.enddate}}</td>
+                </tr>
+                <tr>
+                    <th>所买产品</th>
+                    <td><a href="/product/{{repayitem.thiscontract.thisproduct.id}}">{{repayitem.thiscontract.thisproduct.name}}</a></td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <div id="status">
+            <br /><br />
+            {%ifequal repayitem.status 1%}
+            <button class="btn btn-primary" onclick="repay({{repayitem.id}})">还款</button> <br /><br />
+            {%ifnotequal repayitem.repaytype 1%}
+            <form action="/renewalcontract/{{repayitem.id}}" method="get">
+                <input type="submit" class="btn btn-primary" value="续签" />
+            </form>
+            {%endifnotequal%}
+            {%endifequal%}
+            {%ifequal repayitem.status 3%}
+            <label>该还款项已续签</label>
+            <button onclick="repay({{repayitem.id}})">还款</button><br />
+    
+            {%endifequal%}
+            {%ifequal repayitem.status 2%}
+            <label>该还款项已完成</label>
+            {%endifequal%}
+            {%ifequal repayitem.status 4%}
+            <label>该还款项已完成</label>
+            {%endifequal%}
+        </div>
+            <input type="submit" value="返回" class="btn btn-primary" onclick="back()">
+    </div>
+
+    
 {% endblock %}
