--- a/HG/HG/template/newcontract.html
+++ b/HG/HG/template/newcontract.html
@@ -8,7 +8,7 @@
         <h1>欢迎使用理财管理查询系统</h1>
     </div>
     {%if repayitem_id%}
-    对合同<a href="/contract/{{onecontract.id}}">{{onecontract.number}}</a>的续签
+    对合同<a href="/contract/{{onecontract.id}}" target="_blank">{{onecontract.number}}</a>的续签
     {%endif%}
     {% if create_succ %}
         <div class="alert alert-error">
@@ -20,6 +20,12 @@
         <div class="alert alert-error">
             <button type="button" class="close" data-dismiss="alert">×</button>
             <h4>失败!</h4>合同号已存在
+        </div>
+    {% endif %}
+    {% if renewal_err %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>续签失败!</h4>合同已续签
         </div>
     {% endif %}
     <div class="newcontract">
@@ -51,7 +57,70 @@
         </form>
     </div>
     </div>
-<div>
-
+</div>
+{%if repayitem_id%}
+    <h2>原合同内容</h2>
+    <table  class="table" style="width: 30%;margin:auto ;font-size:20px;text-align:left; border-collapse:separate;border-spacing:10px">
+            <tbody>
+                <tr>
+                    <th>合同编号</th>
+                    <td>{{onecontract.number}}</td>
+                </tr>
+				
+                <tr>
+                    <th>姓名</th>
+                    <td>{{onecontract.client_name}} </td>
+                </tr>
+                <tr>
+                    <th>身份证号</th>
+                    <td>{{onecontract.client_idcard}}  </td>
+                </tr>
+                <tr>
+                    <th>开户行</th>
+                    <td>{{onecontract.bank}}</td>
+                </tr>
+                <tr>
+                    <th>收款支行</th>
+                    <td>{{onecontract.subbranch}}</td>
+                </tr>
+                <tr>
+                    <th>收款省/直辖市</th>
+                    <td>{{onecontract.province}}</td>
+                </tr>
+                <tr>
+                    <th>收款市/县</th>
+                    <td>{{onecontract.city}}</td>
+                </tr>
+                <tr>
+                    <th>银行卡号</th>
+                    <td>{{onecontract.bank_card}}</td>
+                </tr>
+                <tr>
+                    <th>金额</th>
+					<td>{{onecontract.money}}</td>
+                </tr>
+                <tr>
+                    <th>产品</th>
+                    <td><a href="/product/{{onecontract.thisproduct.id}}">{{onecontract.thisproduct.name}}</a></td>
+                </tr>
+                <tr>
+                    <th>开始日期</th>
+                    <td>{{onecontract.startdate}}</td>
+                </tr>
+                <tr>
+                    <th>结束日期</th>
+					    <td>{{onecontract.enddate}}</td>
+                </tr>
+                <tr>
+                    <th>理财顾问</th>
+                    <td>{{onecontract.thismanager.name}}</td>
+                </tr>
+                <tr>
+                    <th>备注</th>
+                    <td>{{onecontract.comment}}</td>
+                </tr>
+                </tbody>
+        </table>
+{%endif%}
 
 {% endblock %}
