--- a/HG/HG/template/showcontract.html
+++ b/HG/HG/template/showcontract.html
@@ -35,6 +35,10 @@ history.back(-1);
                     <td>{{contract.client_idcard}}  </td>
                 </tr>
                 <tr>
+                    <th>客户地址</th>
+                    <td>{{contract.address}}  </td>
+                </tr>
+                <tr>
                     <th>开户行</th>
                     <td>{{contract.bank}}</td>
                 </tr>
@@ -73,6 +77,10 @@ history.back(-1);
                 <tr>
                     <th>理财顾问</th>
                     <td>{{contract.thismanager.name}}</td>
+                </tr>
+                <tr>
+                    <th>手续费</th>
+                    <td>{{contract.factorage}}</td>
                 </tr>
                 <tr>
                     <th>备注</th>
