--- a/HG/HG/template/newbigparty.html
+++ b/HG/HG/template/newbigparty.html
@@ -13,6 +13,12 @@
             <h4>成功!</h4>保存成功
         </div>
     {% endif %}
+    {% if name_err %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>失败!</h4>该大团已存在
+        </div>
+    {% endif %}
     <div class="well">
         <form class="form-horizontal" action="" method="post">
             {% csrf_token %}
